fix: nav element에 설정된 overflow: auto 프로퍼티 제거 for 불필요 스크롤바

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -41,7 +41,7 @@ footer > .footer_wrap,
 }
 
 .nav {
-  overflow: auto;
+  // overflow: auto;
   padding: 24px 0;
 
   &-container {
